@@ -26,7 +26,6 @@ libxfpm/xfpm-dbus.c
 libxfpm/xfpm-popups.c
 libxfpm/hal-marshal.c
 libxfpm/hal-manager.c
-libxfpm/dbus-hal.c
 libxfpm/hal-power.c
 libxfpm/hal-battery.c
 panel-plugins/brightness/main.c
