@@ -876,7 +876,7 @@
                                     <child>
                                       <widget class="GtkLabel" id="label3">
                                         <property name="visible">True</property>
-                                        <property name="label" translatable="yes">Consider the computer on low power when the main power reaches:</property>
+                                        <property name="label" translatable="yes">Consider the computer on low power:</property>
                                       </widget>
                                       <packing>
                                         <property name="expand">False</property>
@@ -892,6 +892,7 @@
                                         <property name="adjustment">5 5 20 1 0 0</property>
                                       </widget>
                                       <packing>
+                                        <property name="expand">False</property>
                                         <property name="position">1</property>
                                       </packing>
                                     </child>
