@@ -1,4 +1,7 @@
 
+2009-03-18 10:46 Ali aliov@xfce.org 
+	 * : Removed already deleted file from PTOFILES.in+modified string in the settings dialog
+
 2009-03-18 10:04 Ali aliov@xfce.org 
 	 * : Calculate battery percentage if this key is not present in HAL
 
